# shape_detector

./: .gitignore  README.md
src/: CMakeLists.txt  Makefile  shape_detector.cc  shape_detector.hpp  tries.cc  utils.cc
src/.cache/clangd/index/: shape_detector.cc.2C61274A1DFA3949.idx  shape_detector.hpp.001567338A9C6E33.idx  utils.cc.17D9085DC10B8DDF.idx
src/cmake/: config.cmake  files.cmake
src/install_d/: shape_detector
src/mds/: GT.md  opencv_template.md
